# block-embeddings

./: README.md  pyproject.toml
data/: encoder.pth
embeddings_confidence/: __init__.py  convert.py  data_loader.py  load_data.py  model.py  settings.py  similarity_matrix.py  train.py  train_module.py  triplet_loss.py  validate.py
